...
          }
        }}
      />
      <Tabs.Screen
        name="(hadeeth)"
        options={{
          tabBarButtonTestID: 'tab-hadis',
          tabBarLabel: t(SHARED_TEXT.TAB_HADITH_LABEL),
          tabBarIcon: ({ focused }) => {
            return (
              <LayoutGridIcon size={22} color={focused ? 'white' : '#d1d1d1'} />
              // <View
              //   style={{
...
          }
        }}
      />
      <Tabs.Screen
        name="(search)"
        options={{
          tabBarButtonTestID: 'tab-carian',
          tabBarLabel: t(SHARED_TEXT.TAB_SEARCH_LABEL),
          tabBarIcon: ({ focused }) => {
            return (
              <SearchIcon size={22} color={focused ? 'white' : '#d1d1d1'} />
              // <View
              //   style={{
...
