...
        <View
          className={`px-4 flex flex-row justify-between items-center rounded-b-2xl pb-6 pt-6 shadow-lg bg-royal-blue-950 overflow-hidden`}
        >
          <View className="flex-1 bg-white rounded-full shadow-md flex-row items-end px-4 py-3">
            <SearchIcon size={20} className="h-[4lh]" color="#666" />
            <TextInput
              testID="search-input"
              className="flex-1 leading-5 text-base ml-2"
              placeholder={t(SHARED_TEXT.SEARCH_SEARCHBAR_PLACEHOLDER)}
              value={searchKeyword}
              autoCorrect={false}
              autoComplete={'off'}
              spellCheck={false}
...
