...
              )}
              <Button
                isIconOnly
                className="bg-gray-100"
                onPress={handlePlayAll}
                accessibilityLabel="Main Semua Audio"
                testID="play-all-audio"
                isDisabled={
                  isLoadingPlaylist || !allHadiths || allHadiths.length === 0
                }
              >
                {isLoadingPlaylist ? (
                  <ActivityIndicator size="small" color="white" />
...
